@@ -1,13 +1,13 @@
 package edu.ntnu.idi.idatt.millions.controller;
 
 import edu.ntnu.idi.idatt.millions.model.market.Exchange;
-import edu.ntnu.idi.idatt.millions.model.player.Player;
 import edu.ntnu.idi.idatt.millions.model.market.ReadOnlyStock;
+import edu.ntnu.idi.idatt.millions.model.player.Player;
 import edu.ntnu.idi.idatt.millions.model.portfolio.Share;
 import edu.ntnu.idi.idatt.millions.model.transaction.CostPreviewCalculator;
 import edu.ntnu.idi.idatt.millions.view.dialogs.TransactionDialog;
-import edu.ntnu.idi.idatt.millions.view.util.ViewFormatter;
 import edu.ntnu.idi.idatt.millions.view.pages.TradingView;
+import edu.ntnu.idi.idatt.millions.view.util.ViewFormatter;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
@@ -15,12 +15,12 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * <p>Controller for the trading page.</p>
- * <p>Owns the wiring between the {@link TradingView} and the underlying
- * models: registers the view as an exchange observer, fires an initial push so
- * the chart and stock list populate on startup, and handles stock search,
- * live cost preview, and buy/sell order execution with quantity- or
- * dollar-amount input.</p>
+ * Controller for the trading page.
+ *
+ * <p>Owns the wiring between the {@link TradingView} and the underlying models: registers the view
+ * as an exchange observer, fires an initial push so the chart and stock list populate on startup,
+ * and handles stock search, live cost preview, and buy/sell order execution with quantity- or
+ * dollar-amount input.
  */
 public class TradingController {
 
@@ -30,15 +30,14 @@ public class TradingController {
 
   private String selectedSymbol = null;
   private String lastBuySymbol = null;
-  private List<? extends ReadOnlyStock> currentResults = List.of();
 
   /**
-   * <p>Creates a trading controller, registers the view as an exchange
-   * observer, and wires all view callbacks.</p>
+   * Creates a trading controller, registers the view as an exchange observer, and wires all view
+   * callbacks.
    *
-   * @param view     the trading view to control.
+   * @param view the trading view to control.
    * @param exchange the exchange model.
-   * @param player   the active player.
+   * @param player the active player.
    */
   public TradingController(TradingView view, Exchange exchange, Player player) {
     this.view = view;
@@ -54,9 +53,7 @@ public class TradingController {
     view.setOnAction(this::handleTrade);
     view.setOnPercentSelected(this::handlePercent);
 
-    view.getSearchField().textProperty().addListener(
-        (_, _, text) -> filterStocks(text)
-    );
+    view.getSearchField().textProperty().addListener((_, _, text) -> filterStocks(text));
 
     view.onExchangeUpdated(exchange);
     updatePlayerInfo();
@@ -64,8 +61,8 @@ public class TradingController {
   }
 
   /**
-   * <p>Reacts to an exchange update by re-filtering the stock list and
-   * refreshing the chart for the currently selected stock.</p>
+   * Reacts to an exchange update by re-filtering the stock list and refreshing the chart for the
+   * currently selected stock.
    */
   private void onExchangeRefresh() {
     filterStocks(view.getSearchField().getText());
@@ -73,14 +70,13 @@ public class TradingController {
   }
 
   /**
-   * <p>Updates internal state and the view after the user selects a stock
-   * from the list.</p>
+   * Updates internal state and the view after the user selects a stock from the list.
    *
    * @param symbol the ticker symbol of the selected stock
    */
   private void handleStockSelected(String symbol) {
     selectedSymbol = symbol;
-    lastBuySymbol  = symbol;
+    lastBuySymbol = symbol;
     ReadOnlyStock stock = exchange.getStock(symbol);
     view.getStockChart().setStockInfo(stock.getSymbol(), stock.getCompany());
     view.getStockChart().setData(stock.getHistoricalPrices(), exchange.getWeek());
@@ -90,11 +86,10 @@ public class TradingController {
   }
 
   /**
-   * <p>Reacts to the user switching between Buy and Sell mode.</p>
+   * Reacts to the user switching between Buy and Sell mode.
    *
-   * <p>When switching back to Buy, falls back to the last stock shown in the
-   * panel so the user does not lose their place. Sell mode only re-selects a
-   * stock the player actually owns.</p>
+   * <p>When switching back to Buy, falls back to the last stock shown in the panel so the user does
+   * not lose their place. Sell mode only re-selects a stock the player actually owns.
    *
    * @param mode the mode the panel switched to
    */
@@ -103,13 +98,12 @@ public class TradingController {
     selectedSymbol = null;
     view.setActionEnabled(false);
 
-    String symbolToUse = savedSymbol != null ? savedSymbol
-        : (mode == TradingView.Mode.BUY ? lastBuySymbol : null);
+    String symbolToUse =
+        savedSymbol != null ? savedSymbol : (mode == TradingView.Mode.BUY ? lastBuySymbol : null);
 
-    boolean reselect = symbolToUse != null && (
-        mode == TradingView.Mode.BUY
-            || totalOwned(symbolToUse).signum() > 0
-    );
+    boolean reselect =
+        symbolToUse != null
+            && (mode == TradingView.Mode.BUY || totalOwned(symbolToUse).signum() > 0);
 
     view.setHighlightedStock(reselect ? symbolToUse : null);
     filterStocks(view.getSearchField().getText());
@@ -126,45 +120,47 @@ public class TradingController {
   }
 
   /**
-   * <p>Fills the input field with a share quantity representing the given
-   * percentage of the player's available capacity (cash for buy orders, owned
-   * shares for sell orders).</p>
+   * Fills the input field with a share quantity representing the given percentage of the player's
+   * available capacity (cash for buy orders, owned shares for sell orders).
    *
-   * <p>For buy orders the quantity is computed as
-   * {@code floor(cash * percent / (price * (1 + commission)), 8 decimals)} so
-   * the resulting order is always affordable and leaves a sub-cent remainder
-   * at most. Going straight to a quantity avoids a cash→amount→quantity
-   * round-trip whose rounding stages would otherwise either disable the
-   * action button or leave money on the table.</p>
+   * <p>For buy orders the quantity is computed as {@code floor(cash * percent / (price * (1 +
+   * commission)), 8 decimals)} so the resulting order is always affordable and leaves a sub-cent
+   * remainder at most. Going straight to a quantity avoids a cash→amount→quantity round-trip whose
+   * rounding stages would otherwise either disable the action button or leave money on the table.
    *
    * @param percent the percentage to apply, as a decimal (e.g. {@code 0.25})
    */
   private void handlePercent(BigDecimal percent) {
-    if (selectedSymbol == null) return;
+    if (selectedSymbol == null) {
+      return;
+    }
 
     if (view.getMode() == TradingView.Mode.BUY) {
-      BigDecimal price       = exchange.getStock(selectedSymbol).getSalesPrice();
+      BigDecimal price = exchange.getStock(selectedSymbol).getSalesPrice();
       BigDecimal cashPortion = player.getMoney().multiply(percent);
-      BigDecimal divisor     = price.multiply(BigDecimal.ONE.add(CostPreviewCalculator.COMMISSION_RATE));
-      BigDecimal quantity    = cashPortion.divide(divisor, 8, RoundingMode.DOWN);
+      BigDecimal divisor =
+          price.multiply(BigDecimal.ONE.add(CostPreviewCalculator.COMMISSION_RATE));
+      BigDecimal quantity = cashPortion.divide(divisor, 8, RoundingMode.DOWN);
       view.setInputAmount(quantity, false);
     } else {
-      BigDecimal owned    = totalOwned(selectedSymbol);
+      BigDecimal owned = totalOwned(selectedSymbol);
       BigDecimal quantity = owned.multiply(percent);
       view.setInputAmount(quantity, false);
     }
   }
 
   /**
-   * <p>Computes the effective share quantity from the user's input,
-   * converting from a dollar amount when the panel is in amount mode.</p>
+   * Computes the effective share quantity from the user's input, converting from a dollar amount
+   * when the panel is in amount mode.
    *
    * @param price the current sales price of the selected stock
    * @return the share quantity to trade, never null
    */
   private BigDecimal effectiveQuantity(BigDecimal price) {
     BigDecimal raw = view.getInputValue();
-    if (raw.signum() <= 0) return BigDecimal.ZERO;
+    if (raw.signum() <= 0) {
+      return BigDecimal.ZERO;
+    }
     if (view.isAmountMode()) {
       return raw.divide(price, 8, RoundingMode.HALF_UP);
     }
@@ -172,26 +168,27 @@ public class TradingController {
   }
 
   /**
-   * <p>Recalculates and pushes the cost preview to the view based on the
-   * currently selected stock, input value, and input mode. Delegates the
-   * gross/commission/total math to {@link CostPreviewCalculator}.</p>
+   * Recalculates and pushes the cost preview to the view based on the currently selected stock,
+   * input value, and input mode. Delegates the gross/commission/total math to {@link
+   * CostPreviewCalculator}.
    */
   private void updateCostPreview() {
-    if (selectedSymbol == null) return;
+    if (selectedSymbol == null) {
+      return;
+    }
 
     ReadOnlyStock stock = exchange.getStock(selectedSymbol);
     BigDecimal price = stock.getSalesPrice();
     view.setCurrentPrice(price);
     BigDecimal qty = effectiveQuantity(price);
 
-    CostPreviewCalculator preview = new CostPreviewCalculator(
-        price, qty, view.getMode() == TradingView.Mode.BUY);
+    CostPreviewCalculator preview =
+        new CostPreviewCalculator(price, qty, view.getMode() == TradingView.Mode.BUY);
 
     view.setCostPreview(
         ViewFormatter.price(preview.getGross()),
         ViewFormatter.price(preview.getCommission()),
-        ViewFormatter.price(preview.getTotal())
-    );
+        ViewFormatter.price(preview.getTotal()));
 
     if (view.isAmountMode()) {
       view.setDerivedLabel("≈ " + ViewFormatter.quantity(qty) + " shares");
@@ -211,16 +208,16 @@ public class TradingController {
   }
 
   /**
-   * <p>Updates the "Owned: X" hint shown above the input field. Only visible
-   * in Sell mode when a stock is selected.</p>
+   * Updates the "Owned: X" hint shown above the input field. Only visible in Sell mode when a stock
+   * is selected.
    */
   private void updateOwnedHint() {
     view.setOwnedQuantity(selectedSymbol == null ? null : totalOwned(selectedSymbol));
   }
 
   /**
-   * <p>Refreshes the player info card: cash balance and owned quantity of
-   * the currently selected stock.</p>
+   * Refreshes the player info card: cash balance and owned quantity of the currently selected
+   * stock.
    */
   private void updatePlayerInfo() {
     view.setCashBalance(player.getMoney());
@@ -228,7 +225,7 @@ public class TradingController {
   }
 
   /**
-   * <p>Sums the player's owned quantity across all share lots for a symbol.</p>
+   * Sums the player's owned quantity across all share lots for a symbol.
    *
    * @param symbol the stock symbol
    * @return the total quantity owned
@@ -240,18 +237,19 @@ public class TradingController {
   }
 
   /**
-   * <p>Executes a buy or sell order based on the current panel mode.</p>
+   * Executes a buy or sell order based on the current panel mode.
    *
-   * <p>This is a template method: both modes share the same flow of
-   * (1) reading the input quantity, (2) validating it, (3) executing through
-   * {@link TransactionExecutor}, and (4) showing a confirmation dialog. Only
-   * the transaction method, dialog, error title, and list-refresh side-effect
-   * differ between Buy and Sell.</p>
+   * <p>This is a template method: both modes share the same flow of (1) reading the input quantity,
+   * (2) validating it, (3) executing through {@link TransactionExecutor}, and (4) showing a
+   * confirmation dialog. Only the transaction method, dialog, error title, and list-refresh
+   * side-effect differ between Buy and Sell.
    *
    * @param mode the panel mode at the time of click
    */
   private void handleTrade(TradingView.Mode mode) {
-    if (selectedSymbol == null) return;
+    if (selectedSymbol == null) {
+      return;
+    }
 
     final String symbol = selectedSymbol;
     final boolean isBuy = mode == TradingView.Mode.BUY;
@@ -265,8 +263,7 @@ public class TradingController {
 
     TransactionExecutor.execute(
         errorTitle,
-        () -> isBuy ? exchange.buy(symbol, qty, player)
-                    : exchange.sell(symbol, qty, player),
+        () -> isBuy ? exchange.buy(symbol, qty, player) : exchange.sell(symbol, qty, player),
         tx -> {
           if (isBuy) {
             TransactionDialog.showPurchaseConfirmation(tx, player.getMoney());
@@ -275,63 +272,62 @@ public class TradingController {
             filterStocks(view.getSearchField().getText());
           }
           updatePlayerInfo();
-        }
-    );
+        });
   }
 
   /**
-   * <p>Filters the stock list by the given search text and pushes the result
-   * to the view. In Sell mode, the list is further filtered to only stocks
-   * the player currently owns.</p>
+   * Filters the stock list by the given search text and pushes the result to the view. In Sell
+   * mode, the list is further filtered to only stocks the player currently owns.
    *
    * @param text the search term typed by the user
    */
   private void filterStocks(String text) {
-    List<? extends ReadOnlyStock> base = text.isBlank()
-        ? exchange.getStocks()
-        : exchange.findStocks(text);
+    List<? extends ReadOnlyStock> base =
+        text.isBlank() ? exchange.getStocks() : exchange.findStocks(text);
 
+    List<? extends ReadOnlyStock> results;
     if (view.getMode() == TradingView.Mode.SELL) {
-      Set<String> owned = player.getPortfolio().getShares().stream()
-          .map(s -> s.getStock().getSymbol())
-          .collect(Collectors.toSet());
-      currentResults = base.stream()
-          .filter(s -> owned.contains(s.getSymbol()))
-          .toList();
+      Set<String> owned =
+          player.getPortfolio().getShares().stream()
+              .map(s -> s.getStock().getSymbol())
+              .collect(Collectors.toSet());
+      results = base.stream().filter(s -> owned.contains(s.getSymbol())).toList();
     } else {
-      currentResults = base;
+      results = base;
     }
 
-    view.setStocks(currentResults);
+    view.setStocks(results);
   }
 
   /**
-   * <p>Selects the first available stock by default so the chart and buy panel
-   * are populated on startup without requiring user interaction. Called from
-   * the constructor.</p>
+   * Selects the first available stock by default so the chart and buy panel are populated on
+   * startup without requiring user interaction. Called from the constructor.
    *
-   * <p>The actual selection state is updated by {@link #handleStockSelected},
-   * which is fired as a callback from {@code view.selectStock(...)}. This
-   * method only performs the view-side calls that precede that callback.</p>
+   * <p>The actual selection state is updated by {@link #handleStockSelected}, which is fired as a
+   * callback from {@code view.selectStock(...)}. This method only performs the view-side calls that
+   * precede that callback.
    */
   private void selectDefault() {
     List<? extends ReadOnlyStock> stocks = exchange.getStocks();
-    if (stocks.isEmpty()) return;
-    view.selectStock(stocks.get(0));
+    if (stocks.isEmpty()) {
+      return;
+    }
+    view.selectStock(stocks.getFirst());
   }
 
   /**
-   * <p>Focuses a stock by symbol: switches to Buy mode, populates the search
-   * field with the symbol so the list is filtered, and selects the stock so
-   * the chart and buy panel update.</p>
+   * Focuses a stock by symbol: switches to Buy mode, populates the search field with the symbol so
+   * the list is filtered, and selects the stock so the chart and buy panel update.
    *
-   * <p>The actual selection state is updated by {@link #handleStockSelected},
-   * which is fired as a callback from {@code view.selectStock(...)}.</p>
+   * <p>The actual selection state is updated by {@link #handleStockSelected}, which is fired as a
+   * callback from {@code view.selectStock(...)}.
    *
    * @param symbol the ticker symbol to focus
    */
   public void focusStock(String symbol) {
-    if (symbol == null || !exchange.hasStock(symbol)) return;
+    if (symbol == null || !exchange.hasStock(symbol)) {
+      return;
+    }
     view.setMode(TradingView.Mode.BUY);
     view.getSearchField().setText(symbol);
     view.setHighlightedStock(symbol);
@@ -340,20 +336,21 @@ public class TradingController {
   }
 
   /**
-   * <p>Refreshes the chart for the currently selected stock. Called whenever
-   * the exchange notifies the view of an update, so a week-advance keeps the
-   * chart in sync without explicit coordination from outside.</p>
+   * Refreshes the chart for the currently selected stock. Called whenever the exchange notifies the
+   * view of an update, so a week-advance keeps the chart in sync without explicit coordination from
+   * outside.
    */
   private void refreshChart() {
-    if (selectedSymbol == null) return;
+    if (selectedSymbol == null) {
+      return;
+    }
     try {
       ReadOnlyStock stock = exchange.getStock(selectedSymbol);
       view.getStockChart().setStockInfo(stock.getSymbol(), stock.getCompany());
       view.getStockChart().setData(stock.getHistoricalPrices(), exchange.getWeek());
-    } catch (IllegalArgumentException _) {
+    } catch (IllegalArgumentException ignore) {
       // Expected: the previously-selected symbol is no longer in the exchange.
       // The list-refresh that runs alongside will drop the stale highlight.
     }
   }
-
 }
